# lib-pluma

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  test_field.cpp
docs/: API_REFERENCE.md
docs/api/A11y/: pluma_a11y_A11yNode.md  pluma_a11y_A11yTreeBuilder.md
docs/api/Core/: pluma_Command.md  pluma_CursorState.md  pluma_DeleteTextCommand.md  pluma_DocumentSnapshot.md  pluma_InsertTextCommand.md  pluma_NodeId.md  pluma_Piece.md  pluma_PieceTable.md  pluma_PieceTable_Position.md  pluma_PlumaEditor.md  pluma_Point.md  pluma_Rect.md  pluma_RevisionId.md  pluma_Size.md  pluma_TableSelection.md  pluma_TextSlice.md  pluma_Transaction.md  pluma_Twips.md  pluma_UndoManager.md  pluma_UndoManager_HistoryEntry.md  pluma_plugins_PropertyValueToJson.md
docs/api/DOM/: pluma_DOMManager.md  pluma_DOMNode.md  pluma_DocumentNode.md  pluma_ParagraphNode.md  pluma_RunNode.md  pluma_TableCellNode.md  pluma_TableNode.md  pluma_TableRowNode.md
docs/api/Diagnostics/: pluma_diagnostics_Dumper.md  pluma_diagnostics_Profiler.md  pluma_diagnostics_ScopedTimer.md
docs/api/Editor/: pluma_CaretResolver.md  pluma_SelectionRange.md
docs/api/Input/: pluma_InputRouter.md  pluma_InputRouter_ShortcutHash.md  pluma_InputRouter_ShortcutKey.md
docs/api/Layout/: pluma_BlockBox.md  pluma_DirtyRegion.md  pluma_ImageBox.md  pluma_InvalidationTracker.md  pluma_LayoutBox.md  pluma_LayoutEngine.md  pluma_LayoutScheduler.md  pluma_LayoutTask.md  pluma_LineBox.md  pluma_PageBox.md  pluma_PageMargins.md  pluma_PageSize.md  pluma_RunBox.md  pluma_TableBox.md  pluma_TableCellBox.md  pluma_TableRowBox.md
docs/api/Optimization/: pluma_optimization_ObjectPool.md  pluma_optimization_ShaperCache.md
docs/api/Plugins/: pluma_plugins_IExporter.md  pluma_plugins_IImporter.md  pluma_plugins_MarkdownExporter.md  pluma_plugins_MarkdownImporter.md  pluma_plugins_PdfExporter.md  pluma_plugins_PlumaArchiveExporter.md  pluma_plugins_PlumaArchiveImporter.md
docs/api/Render/: pluma_CairoRenderer.md  pluma_DisplayCommand.md  pluma_DisplayList.md  pluma_DrawGlyphRunCommand.md  pluma_DrawImageCommand.md  pluma_DummyRenderer.md  pluma_FillRectCommand.md  pluma_IRenderer.md  pluma_PopClipCommand.md  pluma_PushClipCommand.md
docs/api/Services/: pluma_IDocumentService.md  pluma_SearchIndexer.md  pluma_ServiceManager.md
docs/api/Style/: pluma_FontDescriptor.md  pluma_FormatRegistry.md  pluma_PropertyBag.md  pluma_StyleResolver.md  pluma_StyleSpan.md
docs/api/Typography/: pluma_DummyFont.md  pluma_DummyFontManager.md  pluma_DummyTextShaper.md  pluma_Glyph.md  pluma_IFont.md  pluma_IFontManager.md  pluma_ITextShaper.md  pluma_ShapedTextRun.md
examples/: demo_render.cpp
include/pluma/: Command.hpp  CoreTypes.hpp  NodeId.hpp  PieceTable.hpp  PlumaEditor.hpp  RevisionId.hpp  TextSlice.hpp  Transaction.hpp  UndoManager.hpp
include/pluma/A11y/: A11yNode.hpp  A11yTreeBuilder.hpp
include/pluma/DOM/: DOMManager.hpp  DOMNode.hpp
include/pluma/Diagnostics/: Dumper.hpp  Profiler.hpp
include/pluma/Editor/: CaretResolver.hpp  Selection.hpp
include/pluma/Input/: InputRouter.hpp  InputTypes.hpp
include/pluma/Layout/: DirtyRegion.hpp  LayoutBox.hpp  LayoutEngine.hpp  LayoutScheduler.hpp  PageSize.hpp
include/pluma/Optimization/: ObjectPool.hpp  ShaperCache.hpp
include/pluma/Plugins/: IExporter.hpp  IImporter.hpp  MarkdownExporter.hpp  MarkdownImporter.hpp  PdfExporter.hpp  PlumaArchiveExporter.hpp  PlumaArchiveImporter.hpp
include/pluma/Render/: CairoRenderer.hpp  DisplayCommand.hpp  DisplayList.hpp  DummyRenderer.hpp  IRenderer.hpp  ImageMask.hpp
include/pluma/Services/: IDocumentService.hpp  SearchIndexer.hpp  ServiceManager.hpp  SpellCheckAnalyzer.hpp  SpellCheckerService.hpp
include/pluma/Style/: FontDescriptor.hpp  FormatRegistry.hpp  PropertyBag.hpp  StyleProperties.hpp  StyleResolver.hpp
include/pluma/Typography/: DummyTypography.hpp  Glyph.hpp  IFontManager.hpp  ITextShaper.hpp
scripts/: generate_docs.py  improve_docs.py  xml_to_md.py
src/: Command.cpp  NodeId.cpp  PieceTable.cpp  PlumaEditor.cpp  RevisionId.cpp  Transaction.cpp  UndoManager.cpp
src/A11y/: A11yTreeBuilder.cpp
src/DOM/: DOMManager.cpp
src/Diagnostics/: Dumper.cpp  Profiler.cpp
src/Editor/: CaretResolver.cpp
src/Input/: InputRouter.cpp
src/Layout/: LayoutEngine.cpp  LayoutScheduler.cpp
src/Plugins/: MarkdownExporter.cpp  MarkdownImporter.cpp  PdfExporter.cpp  PlumaArchiveExporter.cpp  PlumaArchiveImporter.cpp
src/Render/: CairoRenderer.cpp  DisplayList.cpp  test_cairo  test_cairo.cpp  test_stb  test_stb.cpp
src/Services/: SearchIndexer.cpp  ServiceManager.cpp  SpellCheckAnalyzer.cpp  SpellCheckerService.cpp
src/Style/: FormatRegistry.cpp  PropertyBag.cpp  StyleResolver.cpp
src/Typography/: DummyTypography.cpp
tests/: CMakeLists.txt  test_a11y.cpp  test_advanced_pagination.cpp  test_core_types.cpp  test_diagnostics.cpp  test_display_list.cpp  test_dom.cpp  test_editor.cpp  test_incremental_layout.cpp  test_input.cpp  test_layout.cpp  test_optimization.cpp  test_piece_table.cpp  test_plugins.cpp  test_renderer.cpp  test_selection.cpp  test_services.cpp  test_styles.cpp  test_transactions.cpp  test_typography.cpp  test_virtualization.cpp
